# BevyJam5

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: game_shader.wgsl  material2d.wgsl
assets/audio/: close.flac  miss_tone.flac  tone.flac
src/: lib.rs  main.rs  palette.rs  sampling.rs
