[package]
name = "bevy_jam_5"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking", "file_watcher"] }
ridiculous_bevy_hot_reloading = { git = "https://github.com/DGriffin91/ridiculous_bevy_hot_reloading" }
bevy_vector_shapes = "0.8.0"

[lib]
# This naming scheme with "lib_" prefix is default but can be configured with HotReload::library_name.
name = "lib_bevy_jam_5"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[features]
hot_reload = ["ridiculous_bevy_hot_reloading/hot_reload"]

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
