[package]
name = "bevy_jam_5"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[dependencies]
bevy = { version = "0.14" }
ridiculous_bevy_hot_reloading = { git = "https://github.com/DGriffin91/ridiculous_bevy_hot_reloading", optional = true }
bevy_vector_shapes = "0.8.0"
bevy_framepace = "0.17.1"

[lib]
# This naming scheme with "lib_" prefix is default but can be configured with HotReload::library_name.
name = "lib_bevy_jam_5"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[features]
#default = ["hot_reload"]
hot_reload = [
    "ridiculous_bevy_hot_reloading/hot_reload",
    "bevy/file_watcher",
    "bevy/dynamic_linking",
    "dep:ridiculous_bevy_hot_reloading",
]

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
