[package]
name = "bevy_jam_5"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }
ridiculous_bevy_hot_reloading = { git = "https://github.com/DGriffin91/ridiculous_bevy_hot_reloading", optional = true }
bevy_framepace = "0.17.1"
bevy_kira_audio = { version = "0.20.0", default-features = false, features = [
    "flac",
] }
bevy_asset_loader = "0.21.0"
iyes_progress = "0.12.0"

[lib]
# This naming scheme with "lib_" prefix is default but can be configured with HotReload::library_name.
name = "lib_bevy_jam_5"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[features]
#default = ["hot_reload"]
hot_reload = [
    "ridiculous_bevy_hot_reloading/hot_reload",
    "bevy/file_watcher",
    "bevy/dynamic_linking",
    "dep:ridiculous_bevy_hot_reloading",
]


[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
